--- a/test.ipynb
+++ b/test.ipynb
@@ -605,7 +605,12 @@
    "outputs": [],
    "source": [
     "import torchvision.datasets as datasets\n",
-    "new_dataset = datasets.ImageFolder(root='./new_data', transform=transform)\n",
+    "newtransform = transforms.Compose(\n",
+    "    [transforms.Resize((32, 32)),\n",
+    "     transforms.ToTensor(),\n",
+    "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+    "\n",
+    "new_dataset = datasets.ImageFolder(root='./new_data', transform=newtransform)\n",
     "new_dataloader = torch.utils.data.DataLoader(new_dataset, batch_size=batch_size,\n",
     "                                         shuffle=False, num_workers=2)\n",
     "correct = 0\n",
