--- a/test.ipynb
+++ b/test.ipynb
@@ -591,11 +591,7 @@
    "source": [
     "# download new dataset from github repo https://github.com/AFAskar/dlimageclass/tree/main/dataset/cat/\n",
     "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/cat/cat1.jpeg\n",
-    "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/cat/cat2.jpeg\n",
-    "# move them to a folder named 'cat' inside a folder named './new_data'\n",
-    "!mkdir -p ./new_data/cat\n",
-    "!mv cat1.jpeg ./new_data/cat/\n",
-    "!mv cat2.jpeg ./new_data/cat/"
+    "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/cat/cat2.jpeg\n"
    ]
   },
   {
@@ -649,6 +645,58 @@
     "outputs = net(images)\n",
     "_, predicted = torch.max(outputs, 1)\n",
     "print('Predicted: ', ' '.join(f'{classes[predicted[j]]:5s}' for j in range(current_batch_size)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, that is a great idea. It makes the code reusable and easier to test with arbitrary images without needing to structure them into dataset folders.\n",
+    "\n",
+    "Here is a function that takes an image path, preprocesses it, and returns the model's prediction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "def predict_image(image_path, model, classes):\n",
+    "    # Load the image using PIL\n",
+    "    img = Image.open(image_path)\n",
+    "    \n",
+    "    # Define the transformations (Resizing to 32x32 to match the model input)\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.Resize((32, 32)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "    ])\n",
+    "    \n",
+    "    # Apply transformations\n",
+    "    img_t = transform(img)\n",
+    "    \n",
+    "    # Add a batch dimension (The model expects a batch of images)\n",
+    "    batch_t = torch.unsqueeze(img_t, 0)\n",
+    "    \n",
+    "    # Move to the correct device\n",
+    "    batch_t = batch_t.to(device)\n",
+    "    \n",
+    "    # Run the model\n",
+    "    model.eval() # Set model to evaluation mode\n",
+    "    with torch.no_grad():\n",
+    "        out = model(batch_t)\n",
+    "        \n",
+    "    # Get the predicted class\n",
+    "    _, index = torch.max(out, 1)\n",
+    "    \n",
+    "    return classes[index[0]]\n",
+    "\n",
+    "# Test the function with the downloaded images\n",
+    "print(f\"Prediction for cat1: {predict_image('./new_data/cat/cat1.jpeg', net, classes)}\")\n",
+    "print(f\"Prediction for cat2: {predict_image('./new_data/cat/cat2.jpeg', net, classes)}\")"
    ]
   }
  ],
