--- a/test.ipynb
+++ b/test.ipynb
@@ -268,6 +268,7 @@
     "    for i, data in enumerate(trainloader, 0):\n",
     "        # get the inputs; data is a list of [inputs, labels]\n",
     "        inputs, labels = data\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
     "        # zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
