sending all instances to gpu

--- a/test.ipynb
+++ b/test.ipynb
@@ -362,6 +362,7 @@
    "outputs": [],
    "source": [
     "net = Net()\n",
+    "net.to(device)\n",
     "net.load_state_dict(torch.load(PATH, weights_only=True))"
    ]
   },
