--- a/custom.ipynb
+++ b/custom.ipynb
@@ -115,7 +115,8 @@
       "source": [
         "transform = transforms.Compose(\n",
         "    [transforms.ToTensor(),\n",
-        "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+        "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+        "    transforms.Resize((32,32))]) \n",
         "\n",
         "batch_size = 4\n",
         "\n",
