changed path to avoid overwriting prev

--- a/custom.ipynb
+++ b/custom.ipynb
@@ -307,7 +307,7 @@
       },
       "outputs": [],
       "source": [
-        "PATH = './cifar_net.pth'\n",
+        "PATH = './rps_net.pth'\n",
         "torch.save(net.state_dict(), PATH)"
       ]
     },
