--- a/custom.ipynb
+++ b/custom.ipynb
@@ -629,9 +629,9 @@
       "outputs": [],
       "source": [
         "# # download new dataset from github repo https://github.com/AFAskar/dlimageclass/tree/main/dataset/misc/rps/example1\n",
-        "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/misc/rps/example1.jpeg # rock\n",
-        "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/misc/rps/example2.jpeg # paper\n",
-        "!wget https://raw.githubusercontent.com/AFAskar/dlimageclass/main/dataset/misc/rps/example3.jpeg # scissors"
+        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example1.png?raw=true # rock\n",
+        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example2.png?raw=true # paper\n",
+        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example3.png?raw=true # scissors"
       ]
     },
     {
