--- a/custom.ipynb
+++ b/custom.ipynb
@@ -628,18 +628,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # download new dataset from github repo https://github.com/AFAskar/dlimageclass/tree/main/dataset/misc/rps/example1\n",
-        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example1.png?raw=true # rock\n",
-        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example2.png?raw=true # paper\n",
-        "!wget https://github.com/AFAskar/dlimageclass/blob/main/dataset/misc/rps/example3.png?raw=true # scissors"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "from PIL import Image\n",
         "\n",
         "def predict_image(img:str | Image.Image, model, classes):\n",
@@ -681,7 +669,7 @@
       "outputs": [],
       "source": [
         "# Test the function with the downloaded images\n",
-        "img=Image.open('./example1.jpeg').convert('RGB')\n",
+        "img=Image.open('./dataset/misc/rps/example1.png').convert('RGB')\n",
         "rock=predict_image(img, net, classes)\n",
         "print(f\"Prediction for rock: {rock}\")\n",
         "plt.imshow(img)\n",
@@ -689,7 +677,7 @@
         "plt.title(f'Predicted: {rock}')\n",
         "plt.show()\n",
         "\n",
-        "img=Image.open('./example2.jpeg').convert('RGB')\n",
+        "img=Image.open('./dataset/misc/rps/example2.png').convert('RGB')\n",
         "\n",
         "paper =predict_image(img, net, classes)\n",
         "\n",
@@ -699,7 +687,7 @@
         "plt.title(f'Predicted: {paper}')\n",
         "plt.show()\n",
         "\n",
-        "img=Image.open('./example3.jpeg').convert('RGB')\n",
+        "img=Image.open('./dataset/misc/rps/example3.png').convert('RGB')\n",
         "\n",
         "scissors =predict_image(img, net, classes)\n",
         "\n",
