--- a/custom.ipynb
+++ b/custom.ipynb
@@ -676,7 +676,15 @@
         "plt.axis('off')\n",
         "plt.title(f'Predicted: {rock}')\n",
         "plt.show()\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "img=Image.open('./dataset/misc/rps/example2.png').convert('RGB')\n",
         "\n",
         "paper =predict_image(img, net, classes)\n",
@@ -685,7 +693,15 @@
         "plt.imshow(img)\n",
         "plt.axis('off')\n",
         "plt.title(f'Predicted: {paper}')\n",
-        "plt.show()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "img=Image.open('./dataset/misc/rps/example3.png').convert('RGB')\n",
         "\n",
