--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -111,6 +111,9 @@
         "import torch\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
+        "from torchvision import datasets, models, transforms\n",
+        "from torch import nn, optim\n",
+        "\n",
         "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
         "print(f'Using device: {device}')"
       ]
@@ -145,11 +148,11 @@
       },
       "outputs": [],
       "source": [
-        "transform = transforms.Compose(\n",
-        "    [transforms.ToTensor(),\n",
-        "     transforms.Resize((32,32)),\n",
-        "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
-        "    ]) \n",
+        "transform = transforms.Compose([\n",
+        "        transforms.RandomResizedCrop(224),\n",
+        "        transforms.RandomHorizontalFlip(),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
         "\n",
         "batch_size = 4\n",
         "\n",
@@ -253,6 +256,30 @@
         "\n",
         "net = Net()\n",
         "net.to(device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch.optim import lr_scheduler\n",
+        "model_ft = models.resnet18(weights='IMAGENET1K_V1')\n",
+        "num_ftrs = model_ft.fc.in_features\n",
+        "# Here the size of each output sample is set to 2.\n",
+        "# Alternatively, it can be generalized to ``nn.Linear(num_ftrs, len(class_names))``.\n",
+        "model_ft.fc = nn.Linear(num_ftrs, len(classes))\n",
+        "\n",
+        "model_ft = model_ft.to(device)\n",
+        "\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# Observe that all parameters are being optimized\n",
+        "optimizer_ft = optim.SGD(model_ft.parameters(), lr=0.001, momentum=0.9)\n",
+        "\n",
+        "# Decay LR by a factor of 0.1 every 7 epochs\n",
+        "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)\n"
       ]
     },
     {
@@ -637,13 +664,7 @@
         "        img=Image.open(img).convert('RGB')\n",
         "\n",
         "    \n",
-        "    # Define the transformations (Resizing to 32x32 to match the model input)\n",
-        "    transform = transforms.Compose([\n",
-        "        transforms.Resize((32, 32)),\n",
-        "        transforms.ToTensor(),\n",
-        "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-        "    ])\n",
-        "    \n",
+        "    # Define the transformations (Resizing to 32x32 to match the model input)    \n",
         "    # Apply transformations\n",
         "    img_t = transform(img)\n",
         "    \n",
