--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -149,10 +149,11 @@
       "outputs": [],
       "source": [
         "transform = transforms.Compose([\n",
-        "        transforms.RandomResizedCrop(224),\n",
-        "        transforms.RandomHorizontalFlip(),\n",
-        "        transforms.ToTensor(),\n",
-        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
+        "    transforms.Resize(256),\n",
+        "    transforms.CenterCrop(224),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+        "])\n",
         "\n",
         "batch_size = 4\n",
         "\n",
