updated clone cell

--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -13,7 +13,7 @@
         "import sys\n",
         "\n",
         "\n",
-        "NOTEBOOK_NAME = \"custom.ipynb\" #TODO: automate this\n",
+        "NOTEBOOK_NAME = \"rps_transfer.ipynb\" #TODO: automate this\n",
         "REPO_URL = \"https://github.com/afaskar/dlimageclass.git\"\n",
         "\n",
         "if 'google.colab' in sys.modules:\n",
