--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -215,54 +215,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "2. Define a Convolutional Neural Network\n",
-        "========================================\n",
-        "\n",
-        "Copy the neural network from the Neural Networks section before and\n",
-        "modify it to take 3-channel images (instead of 1-channel images as it\n",
-        "was defined).\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "\n",
-        "class Net(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
-        "        self.pool = nn.MaxPool2d(2, 2)\n",
-        "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-        "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
-        "        self.fc2 = nn.Linear(120, 84)\n",
-        "        self.fc3 = nn.Linear(84, 10)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x = self.pool(F.relu(self.conv1(x)))\n",
-        "        x = self.pool(F.relu(self.conv2(x)))\n",
-        "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
-        "        x = F.relu(self.fc1(x))\n",
-        "        x = F.relu(self.fc2(x))\n",
-        "        x = self.fc3(x)\n",
-        "        return x\n",
-        "\n",
-        "\n",
-        "net = Net()\n",
-        "net.to(device)"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -306,6 +258,7 @@
       "source": [
         "import torch.optim as optim\n",
         "\n",
+        "net= model_ft   \n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
       ]
