--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -170,8 +170,11 @@
         "testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size,\n",
         "                                         shuffle=False, num_workers=2)\n",
         "\n",
+        "\n",
+        "\n",
         "classes = dataset.classes\n",
         "\n",
+        "image_datasets = {'train': trainset, 'val': testset}\n",
         "dataloaders = {'train': trainloader, 'val': testloader}\n",
         "dataset_sizes = {'train': len(trainset), 'val': len(testset)}\n"
       ]
@@ -246,21 +249,6 @@
         "=======================================\n",
         "\n",
         "Let\\'s use a Classification Cross-Entropy loss and SGD with momentum.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "import torch.optim as optim\n",
-        "\n",
-        "net= model_ft   \n",
-        "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
       ]
     },
     {
