--- a/rps_transfer.ipynb
+++ b/rps_transfer.ipynb
@@ -148,21 +148,41 @@
       },
       "outputs": [],
       "source": [
-        "transform = transforms.Compose([\n",
-        "    transforms.Resize(256),\n",
-        "    transforms.CenterCrop(224),\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-        "])\n",
+        "data_transforms = {\n",
+        "    'train': transforms.Compose([\n",
+        "        transforms.RandomResizedCrop(224),\n",
+        "        transforms.RandomHorizontalFlip(),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "    ]),\n",
+        "    'val': transforms.Compose([\n",
+        "        transforms.Resize(256),\n",
+        "        transforms.CenterCrop(224),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "    ]),\n",
+        "}\n",
+        "\n",
         "\n",
         "batch_size = 4\n",
         "\n",
         "from torchvision import datasets\n",
-        "dataset = datasets.ImageFolder(root=\"./dataset/rps\", transform=transform)\n",
-        "train_size = int(0.8 * len(dataset))\n",
-        "test_size = len(dataset) - train_size\n",
-        "trainset, testset = torch.utils.data.random_split(dataset, [train_size, test_size])\n",
+        "full_dataset = datasets.ImageFolder(root=\"./dataset/rps\")\n",
+        "dataset_size = len(full_dataset)\n",
+        "train_size = int(0.8 * dataset_size)\n",
+        "test_size = dataset_size - train_size\n",
         "\n",
+        "# shuffle indices and split\n",
+        "indices = torch.randperm(dataset_size).tolist()\n",
+        "train_indices = indices[:train_size]\n",
+        "test_indices = indices[train_size:]\n",
+        "\n",
+        "# create separate ImageFolder instances with the proper transforms and wrap with Subset\n",
+        "train_dataset = datasets.ImageFolder(root=\"./dataset/rps\", transform=data_transforms['train'])\n",
+        "test_dataset = datasets.ImageFolder(root=\"./dataset/rps\", transform=data_transforms['val'])\n",
+        "\n",
+        "trainset = torch.utils.data.Subset(train_dataset, train_indices)\n",
+        "testset = torch.utils.data.Subset(test_dataset, test_indices)\n",
         "\n",
         "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size,\n",
         "                                          shuffle=True, num_workers=2)\n",
@@ -170,7 +190,7 @@
         "testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size,\n",
         "                                         shuffle=False, num_workers=2)\n",
         "\n",
-        "classes = dataset.classes\n",
+        "classes = full_dataset.classes\n",
         "\n",
         "image_datasets = {'train': trainset, 'val': testset}\n",
         "dataloaders = {'train': trainloader, 'val': testloader}\n",
