--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -32,11 +32,8 @@
    "outputs": [],
    "source": [
     "from ultralytics import YOLO\n",
-    "import pytess\n",
+    "import pytesseract\n",
     "from pathlib import Path\n",
-    "\n",
-    "ocr_en = PaddleOCR(use_angle_cls=True, lang='en')\n",
-    "ocr_ar = PaddleOCR(use_angle_cls=True, lang='ar')\n",
     "\n",
     "\n",
     "license_plate_detection_model = YOLO('yolov11x-license-plate.pt')\n",
@@ -68,7 +65,7 @@
     "            px1, py1, px2, py2 = map(int, plate.xyxy[0])\n",
     "            license_plate_image = car_image[py1:py2, px1:px2]\n",
     "            # ocr \n",
-    "            ocr_result = ocr_en.predict(license_plate_image)\n",
+    "            ocr_result = pytesseract.image_to_string(license_plate_image)\n",
     "            print(\"Detected License Plate Text:\", ocr_result)\n",
     "            output_plates.append(ocr_result)\n",
     "    return output_plates"
