--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -51,7 +51,7 @@
     "from pathlib import Path\n",
     "from paddleocr import PaddleOCR\n",
     "\n",
-    "license_plate_detection_model = YOLO('yolov11x-license-plate.pt')\n",
+    "license_plate_detection_model = YOLO('license-plate-finetune-v1s.pt')\n",
     "\n",
     "car_detection_model = YOLO(\"yolov11n.pt\")\n",
     "ocr_en = PaddleOCR(use_angle_cls=True, lang='en')\n",
