--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -20,7 +20,8 @@
     "if 'google.colab' in sys.modules:\n",
     "    !pip install ultralytics\n",
     "    !pip -q install paddleocr[all]\n",
-    "    !wget https://huggingface.co/morsetechlab/yolov11-license-plate-detection/resolve/main/license-plate-finetune-v1s.pt\n",
+    "    if not os.path.exists('license-plate-finetune-v1s.pt'):\n",
+    "        !wget https://huggingface.co/morsetechlab/yolov11-license-plate-detection/resolve/main/license-plate-finetune-v1s.pt\n",
     "\n"
    ]
   },
@@ -101,7 +102,9 @@
     "#     print(f\"Detected plates: {plates}\")\n",
     "\n",
     "car_results = car_detection_model.predict(source=images[0])\n",
-    "car_results"
+    "print(car_results)\n",
+    "# show bounding boxes\n",
+    "car_results[0].show()"
    ]
   }
  ],
