--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "def detect_cars_and_plates(image_path: Path | str):\n",
     "    # First, detect cars in the image\n",
-    "    car_results = car_detection_model.predict(source=image_path)\n",
+    "    car_results = car_detection_model.predict(source=image_path, classes=[2,5,7])  # COCO classes for car, motorcycle, bus, truck\n",
     "    output_plates = []\n",
     "    for car in car_results[0].boxes:\n",
     "        # Extract car bounding box\n",
@@ -95,16 +95,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if 'google.colab' in sys.modules:\n",
+    "    if \"bmwalleng.png\" not in os.listdir(\".\"):\n",
+    "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
+    "      !mv bmwalleng.png?raw=true bmwalleng.png\n",
     "images = ['./bmwalleng.png']\n",
     "# for img_path in images:\n",
     "#     print(f\"Processing image: {img_path}\")\n",
     "#     plates = detect_cars_and_plates(img_path)\n",
     "#     print(f\"Detected plates: {plates}\")\n",
     "\n",
-    "car_results = car_detection_model.predict(source=images[0])\n",
-    "print(car_results)\n",
-    "# show bounding boxes\n",
-    "car_results[0].show()"
+    "car_results = car_detection_model.predict(source=images[0],classes=[2,5,7])\n",
+    "car_results"
    ]
   }
  ],
