--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install ultralytics\n",
+    "    !pip -q install ultralytics\n",
     "    !pip -q install paddleocr[all]\n",
     "    if not os.path.exists('license-plate-finetune-v1s.pt'):\n",
     "        !wget https://huggingface.co/morsetechlab/yolov11-license-plate-detection/resolve/main/license-plate-finetune-v1s.pt\n",
@@ -62,13 +62,12 @@
     "        plate_results = license_plate_detection_model.predict(source=car_image)\n",
     "        \n",
     "        for plate in plate_results[0].boxes:\n",
-    "            # Extract license plate bounding box\n",
     "            px1, py1, px2, py2 = map(int, plate.xyxy[0])\n",
     "            license_plate_image = car_image[py1:py2, px1:px2]\n",
-    "            # ocr \n",
     "            ocr_result = ocr_en.predict(license_plate_image)\n",
     "            print(\"Detected License Plate Text:\", ocr_result)\n",
     "            output_plates.append(ocr_result)\n",
+    "            \n",
     "    return output_plates"
    ]
   },
@@ -84,10 +83,10 @@
     "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
     "      !mv bmwalleng.png?raw=true bmwalleng.png\n",
     "images = ['./bmwalleng.png']\n",
-    "# for img_path in images:\n",
-    "#     print(f\"Processing image: {img_path}\")\n",
-    "#     plates = detect_cars_and_plates(img_path)\n",
-    "#     print(f\"Detected plates: {plates}\")\n",
+    "for img_path in images:\n",
+    "    print(f\"Processing image: {img_path}\")\n",
+    "    plates = detect_cars_and_plates(img_path)\n",
+    "    print(f\"Detected plates: {plates}\")\n",
     "\n",
     "car_results = car_detection_model.predict(source=images[0],classes=[2,5,7])\n",
     "car_results"
