--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -174,8 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
     "# draw bounding boxes and plate texts on the image\n",
-    "def visualize_plates(data_plates:list[dict[str,any]]):\n",
+    "def visualize_plates(data_plates:list[dict[str,Any]]):\n",
     "    import cv2\n",
     "    import matplotlib.pyplot as plt\n",
     "\n",
