--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -46,33 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f61b3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_ocr_result(ocr_result):\n",
-    "    \"\"\"Parse PaddleOCR result and extract readable text with confidence scores.\"\"\"\n",
-    "    if not ocr_result or len(ocr_result) == 0:\n",
-    "        return []\n",
-    "    \n",
-    "    parsed_results = []\n",
-    "    for detection in ocr_result:\n",
-    "        if detection and len(detection) > 0:\n",
-    "            rec_texts = detection.get('rec_texts', [])\n",
-    "            rec_scores = detection.get('rec_scores', [])\n",
-    "            \n",
-    "            for text, score in zip(rec_texts, rec_scores):\n",
-    "                parsed_results.append({\n",
-    "                    'text': text,\n",
-    "                    'confidence': round(score, 3)\n",
-    "                })\n",
-    "    \n",
-    "    return parsed_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1382ad55",
    "metadata": {},
    "outputs": [],
@@ -87,42 +60,42 @@
     "        car_image = car_results[0].orig_img[y1:y2, x1:x2]\n",
     "        \n",
     "        plate_results = license_plate_detection_model.predict(source=car_image)\n",
-    "        \n",
-    "        for plate in plate_results[0].boxes:\n",
-    "            px1, py1, px2, py2 = map(int, plate.xyxy[0])\n",
-    "            license_plate_image = car_image[py1:py2, px1:px2]\n",
-    "            ocr_result = ocr_en.predict(license_plate_image)\n",
-    "            \n",
-    "            # Parse the OCR result to get readable text\n",
-    "            parsed = parse_ocr_result(ocr_result)\n",
-    "            output_plates.append(parsed)\n",
-    "            \n",
-    "    return output_plates"
+    "                \n",
+    "    return plate_results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e09299fc",
+   "id": "768d4c62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def display_plate_text(parsed_results):\n",
-    "    \"\"\"Display the license plate text in a readable format.\"\"\"\n",
-    "    if not parsed_results:\n",
-    "        return \"No text detected\"\n",
-    "    \n",
-    "    # Combine all text segments\n",
-    "    full_text = ' '.join([r['text'] for r in parsed_results])\n",
-    "    avg_confidence = sum([r['confidence'] for r in parsed_results]) / len(parsed_results)\n",
-    "    \n",
-    "    print(f\"  License Plate: {full_text}\")\n",
-    "    print(f\"  Confidence: {avg_confidence:.1%}\")\n",
-    "    print(f\"  Details: {parsed_results}\")\n",
-    "    \n",
-    "    return full_text"
+    "def run_ocr_on_plate(plate_results):\n",
+    "    ocr_results = []\n",
+    "    for plate in plate_results[0].boxes:\n",
+    "        x1, y1, x2, y2 = map(int, plate.xyxy[0])\n",
+    "        plate_image = plate_results[0].orig_img[y1:y2, x1:x2]\n",
+    "        \n",
+    "        ocr_result = ocr_en.predict(plate_image)\n",
+    "        ocr_results.append(ocr_result)\n",
+    "    return ocr_results\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f24c1e8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_pipeline_results(image_path: Path | str):\n",
+    "    plate_results = detect_cars_and_plates(image_path)\n",
+    "    ocr_results = run_ocr_on_plate(plate_results)\n",
+    "    # show bounding boxes with ocr results\n",
+    "    plate_results[0].show(boxes=True, labels=[res[0][1][1] for res in ocr_results])\n",
+    "    "
    ]
   },
   {
@@ -137,73 +110,13 @@
     "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
     "      !mv bmwalleng.png?raw=true bmwalleng.png\n",
     "\n",
-    "# list of data_plate\n",
-    "data_plates =[]\n",
-    "data_plate ={\n",
-    "  \"img\",\n",
-    "  \"plate_data\"\n",
-    "}\n",
+    "\n",
     "images = ['./bmwalleng.png']\n",
     "for img_path in images:\n",
-    "\n",
-    "    print(f\"\\nProcessing image: {img_path}\")\n",
-    "    plates = detect_cars_and_plates(img_path)\n",
-    "    \n",
-    "    if plates:\n",
-    "        print(f\"\\nFound {len(plates)} license plate(s):\")\n",
-    "        for i, plate_data in enumerate(plates, 1):\n",
-    "            print(f\"\\nPlate #{i}:\")\n",
-    "            data_plate = {\n",
-    "              \"img\": img_path,\n",
-    "              \"plate_data\": plate_data\n",
-    "            }\n",
-    "            data_plates.append(data_plate)\n",
-    "            display_plate_text(plate_data)\n",
-    "            \n",
-    "    else:\n",
-    "        print(\"No license plates detected\")\n",
+    "    visualize_pipeline_results(img_path)\n",
     "        \n",
     "    \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d6e4fbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Any\n",
-    "# draw bounding boxes and plate texts on the image\n",
-    "def visualize_plates(data_plates:list[dict[str,Any]]):\n",
-    "    import cv2\n",
-    "    import matplotlib.pyplot as plt\n",
-    "\n",
-    "    for data_plate in data_plates:\n",
-    "        img_path = data_plate['img']\n",
-    "        plate_data = data_plate['plate_data']\n",
-    "        \n",
-    "        # Load image\n",
-    "        image = cv2.imread(img_path)\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "        \n",
-    "        # Draw bounding boxes and texts\n",
-    "        for plate in plate_data:\n",
-    "            box = plate['box']  # Assuming 'box' key contains bounding box coordinates\n",
-    "            text = plate['text']\n",
-    "            confidence = plate['confidence']\n",
-    "            \n",
-    "            x1, y1, x2, y2 = map(int, box)\n",
-    "            cv2.rectangle(image, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
-    "            cv2.putText(image, f\"{text} ({confidence:.1%})\", (x1, y1 - 10),\n",
-    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 0, 0), 2)\n",
-    "        \n",
-    "        # Display the image\n",
-    "        plt.figure(figsize=(10, 6))\n",
-    "        plt.imshow(image)\n",
-    "        plt.axis('off')\n",
-    "        plt.show()\n"
    ]
   }
  ],
