--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -125,7 +125,7 @@
     "    ocr_results = run_ocr_on_plate(plate_results)    \n",
     "    \n",
     "\n",
-    "plate_results[0].show()\n",
+    "plate_results[0].save_to_json(\"plate_data.json\")\n",
     "\n"
    ]
   }
