hopefully final update

--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -37,6 +37,7 @@
     "from pathlib import Path\n",
     "from paddleocr import PaddleOCR\n",
     "import numpy as np\n",
+    "from typing import Any\n",
     "\n",
     "license_plate_detection_model = YOLO('license-plate-finetune-v1s.pt')\n",
     "\n",
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_ocr_on_plate(plate_results: list[Results]):\n",
+    "def run_ocr_on_plate(plate_results: list[Results])->list[Any]: # no paddle OCR exported class\n",
     "    ocr_results = []\n",
     "    for plate in plate_results[0].boxes:\n",
     "        x1, y1, x2, y2 = map(int, plate.xyxy[0])\n",
@@ -109,24 +110,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e9616bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    if \"bmwalleng.png\" not in os.listdir(\".\"):\n",
+    "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
+    "      !mv bmwalleng.png?raw=true bmwalleng.png\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2a01bcdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'google.colab' in sys.modules:\n",
-    "    if \"bmwalleng.png\" not in os.listdir(\".\"):\n",
-    "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
-    "      !mv bmwalleng.png?raw=true bmwalleng.png\n",
     "\n",
+    "import json\n",
     "\n",
     "images = ['./bmwalleng.png']\n",
     "for img_path in images:\n",
     "    plate_results = run_pipeline(img_path)\n",
     "    ocr_results = run_ocr_on_plate(plate_results)    \n",
     "    \n",
+    "all_ocr_data = []\n",
     "\n",
-    "plate_results[0].save_to_json(\"plate_data.json\")\n",
-    "\n"
+    "for i in range(len(ocr_results)):\n",
+    "    ocr_results[i].to_json(\"ocr_result_\"+str(i)+\".json\")\n",
+    "    with open(\"ocr_result_\"+str(i)+\".json\", 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "        all_ocr_data.append(data)\n",
+    "    os.remove(\"ocr_result_\"+str(i)+\".json\")\n",
+    "\n",
+    "\n",
+    "with open(\"all_ocr_results.json\", 'w') as f:\n",
+    "    json.dump(all_ocr_data, f, indent=4)\n",
+    "    \n"
    ]
   }
  ],
