removing ocr result viewing for now

--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -136,9 +136,7 @@
     "    plate_results = run_pipeline(img_path)\n",
     "    ocr_results = run_ocr_on_plate(plate_results)    \n",
     "# \n",
-    "plate_results[0].show()\n",
-    "with open(\"all_ocr_results.json\", 'w') as f:\n",
-    "    json.dump(ocr_results, f, indent=4)"
+    "plate_results[0].show()"
    ]
   }
  ],
