--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -118,9 +118,13 @@
    "outputs": [],
    "source": [
     "if 'google.colab' in sys.modules:\n",
-    "    if \"bmwalleng.png\" not in os.listdir(\".\"):\n",
+    "    dirl = os.listdir(\".\")\n",
+    "    if \"bmwalleng.png\" not in dirl:\n",
     "      !wget https://github.com/AFAskar/dlimageclass/blob/main/bmwalleng.png?raw=true\n",
-    "      !mv bmwalleng.png?raw=true bmwalleng.png\n"
+    "      !mv bmwalleng.png?raw=true bmwalleng.png\n",
+    "    if '2cars.png' not in dirl:\n",
+    "      !wget https://github.com/AFAskar/dlimageclass/blob/main/2cars.png?raw=true\n",
+    "      !mv 2cars.png?raw=true 2cars.png\n"
    ]
   },
   {
@@ -133,7 +137,7 @@
     "\n",
     "import json\n",
     "\n",
-    "images = ['./bmwalleng.png']\n",
+    "images = ['./bmwalleng.png','./2cars.png']\n",
     "for img_path in images:\n",
     "    plate_results = run_pipeline(img_path)\n",
     "    ocr_results = run_ocr_on_plate(plate_results)    \n",
