i believe it is ended

--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -80,18 +80,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53435071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_plate_images(plate_results: list[Results]) -> list[np.ndarray]:\n",
+    "    output = []\n",
+    "    for plate in plate_results:\n",
+    "        for box in plate.boxes:\n",
+    "            x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
+    "            plate_image = plate.orig_img[y1:y2, x1:x2]\n",
+    "            output.append(plate_image)\n",
+    "    return output   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "768d4c62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_ocr_on_plate(plate_results: list[Results])->list[str]:\n",
+    "def run_ocr_on_plate(plate_images: list[np.ndarray])->list[str]:\n",
     "    ocr_results = []\n",
-    "    for plate in plate_results[0].boxes:\n",
-    "        x1, y1, x2, y2 = map(int, plate.xyxy[0])\n",
-    "        plate_image = plate_results[0].orig_img[y1:y2, x1:x2]\n",
+    "    for plate in plate_images:\n",
     "        \n",
     "        # Convert numpy array to PIL Image for pytesseract\n",
-    "        pil_image = Image.fromarray(plate_image)\n",
+    "        pil_image = Image.fromarray(plate)\n",
     "        ocr_result = pytesseract.image_to_string(pil_image, config='--psm 7')\n",
     "        ocr_results.append(ocr_result.strip())\n",
     "    return ocr_results\n"
@@ -107,7 +122,8 @@
     "def run_pipeline(image_path: Path | str):\n",
     "    car_images = detect_cars(image_path)\n",
     "    plate_results = plate_detection(car_images)\n",
-    "    return plate_results"
+    "    plate_images = get_plate_images(plate_results)\n",
+    "    return plate_images,plate_results"
    ]
   },
   {
@@ -139,8 +155,8 @@
     "\n",
     "images = ['./bmwalleng.png','./2cars.png']\n",
     "for img_path in images:\n",
-    "    plate_results = run_pipeline(img_path)\n",
-    "    ocr_results = run_ocr_on_plate(plate_results)    \n",
+    "    plate_images, plate_results = run_pipeline(img_path)\n",
+    "    ocr_results = run_ocr_on_plate(plate_images)    \n",
     "\n",
     "plate_results[0].show()\n",
     "\n",
