update to show all

--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -151,14 +151,17 @@
    "outputs": [],
    "source": [
     "\n",
+    "\n",
     "import json\n",
     "\n",
     "images = ['./bmwalleng.png','./2cars.png']\n",
+    "all_results = []\n",
     "for img_path in images:\n",
     "    plate_images, plate_results = run_pipeline(img_path)\n",
     "    ocr_results = run_ocr_on_plate(plate_images)    \n",
+    "    all_results.extend(plate_results)\n",
     "\n",
-    "for plate in plate_results:\n",
+    "for plate in all_results:\n",
     "    plate.show()\n",
     "with open('ocr_results.json', 'w') as f:\n",
     "    json.dump(ocr_results, f)"
