--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -73,7 +73,8 @@
    "outputs": [],
    "source": [
     "def plate_detection(car_images: list[np.ndarray]) -> list[Results]:\n",
-    "    plate_results = license_plate_detection_model.predict(source=car_images, verbose=False)\n",
+    "    # don't output no detections\n",
+    "    plate_results = license_plate_detection_model.predict(source=car_images, verbose=False,conf=0.25)\n",
     "    return plate_results"
    ]
   },
