--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -57,11 +57,12 @@
     "    # First, detect cars in the image\n",
     "    car_results = car_detection_model.predict(source=image_path, classes=[2,5,7], verbose=False)  # COCO classes for car, bus, truck\n",
     "    output = []\n",
-    "    for car in car_results[0].boxes:\n",
-    "        # Extract car bounding box\n",
-    "        x1, y1, x2, y2 = map(int, car.xyxy[0])\n",
-    "        car_image = car_results[0].orig_img[y1:y2, x1:x2]\n",
-    "        output.append(car_image)  \n",
+    "    for car in car_results:\n",
+    "        for box in car.boxes:\n",
+    "            # Extract car bounding box\n",
+    "            x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
+    "            car_image = car_results[0].orig_img[y1:y2, x1:x2]\n",
+    "            output.append(car_image)  \n",
     "    return output"
    ]
   },
@@ -101,14 +102,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_ocr_on_plate(plate_images: list[np.ndarray])->list[str]:\n",
-    "    ocr_results = []\n",
+    "def run_ocr_on_plate(plate_images: list[np.ndarray])->dict[str, np.ndarray]:\n",
+    "    ocr_results = {}\n",
     "    for plate in plate_images:\n",
     "        \n",
     "        # Convert numpy array to PIL Image for pytesseract\n",
     "        pil_image = Image.fromarray(plate)\n",
     "        ocr_result = pytesseract.image_to_string(pil_image, config='--psm 7')\n",
-    "        ocr_results.append(ocr_result.strip())\n",
+    "        ocr_results[ocr_result.strip()] = plate\n",
     "    return ocr_results\n"
    ]
   },
@@ -123,7 +124,9 @@
     "    car_images = detect_cars(image_path)\n",
     "    plate_results = plate_detection(car_images)\n",
     "    plate_images = get_plate_images(plate_results)\n",
-    "    return plate_images,plate_results"
+    "    ocr_results = run_ocr_on_plate(plate_images)\n",
+    "\n",
+    "    return ocr_results"
    ]
   },
   {
@@ -141,6 +144,41 @@
     "    if '2cars.png' not in dirl:\n",
     "      !wget https://github.com/AFAskar/dlimageclass/blob/main/2cars.png?raw=true\n",
     "      !mv 2cars.png?raw=true 2cars.png\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dee36aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def output(images_path: Path | str,output_dir:Path|str=\"output\") -> dict[str, str | list[str | Path]]:\n",
+    "    if isinstance(images_path, str):\n",
+    "        images_path=Path(images_path)\n",
+    "    images_path.mkdir(parents=True, exist_ok=True)\n",
+    "    if isinstance(output_dir, str):\n",
+    "        output_dir=Path(output_dir)\n",
+    "        \n",
+    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    ocr_results = run_pipeline(images_path)\n",
+    "    image_paths = []\n",
+    "    output = {}\n",
+    "    # save images with detected plates\n",
+    "    for plate_text, plate_image in ocr_results.items():\n",
+    "        safe_plate_text = plate_text.replace(\" \", \"_\").replace(\"\\n\", \"\")\n",
+    "        image_path = output_dir / f\"{safe_plate_text}.png\"\n",
+    "        Image.fromarray(plate_image).save(image_path)\n",
+    "        image_paths.append(str(image_path))\n",
+    "        output[plate_text] = str(image_path)\n",
+    "\n",
+    "    json_output=output_dir / \"output.json\"\n",
+    "    with open(json_output, \"w\") as f:\n",
+    "        json.dump(output, f, indent=4)\n",
+    "    \n",
+    "    \n",
+    "    return output"
    ]
   },
   {
