--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -43,7 +43,9 @@
     "\n",
     "license_plate_detection_model = YOLO('license-plate-finetune-v1s.pt')\n",
     "\n",
-    "car_detection_model = YOLO(\"yolo11n.pt\")\n"
+    "car_detection_model = YOLO(\"yolo11n.pt\")\n",
+    "\n",
+    "violation_detection_model = YOLO(\"yolo11n-seatbelt.pt\")"
    ]
   },
   {
@@ -53,17 +55,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_cars(image_path: Path | str) -> list[np.ndarray]:\n",
+    "def detect_cars(image_paths: list[Path]) -> list[Results]:\n",
     "    # First, detect cars in the image\n",
-    "    car_results = car_detection_model.predict(source=image_path, classes=[2,5,7], verbose=False)  # COCO classes for car, bus, truck\n",
-    "    output = []\n",
-    "    for car in car_results:\n",
-    "        for box in car.boxes:\n",
-    "            # Extract car bounding box\n",
-    "            x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
-    "            car_image = car_results[0].orig_img[y1:y2, x1:x2]\n",
-    "            output.append(car_image)  \n",
-    "    return output"
+    "    car_results = car_detection_model.predict(source=image_paths, classes=[2,5,7], verbose=False)  # COCO classes for car, bus, truck\n",
+    "    return car_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe429bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_car_images(car_results: list[Results]) -> list[np.ndarray]:\n",
+    "    car_images = []\n",
+    "    for result in car_results:\n",
+    "        if not result.boxes:\n",
+    "            continue\n",
+    "        for car in result.boxes:\n",
+    "            x1, y1, x2, y2 = map(int, car.xyxy[0])\n",
+    "            car_image = result.orig_img[y1:y2, x1:x2]\n",
+    "            car_images.append(car_image)\n",
+    "    return car_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6898beb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mobile'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "violation_class_names=['1', '2', 'No-helmet', 'Np', 'bike', 'car', 'helmet', 'mobile', 'no-helmet', 'person-noseatbelt', 'person-seatbelt', 'seatbelt']\n",
+    "\n",
+    "def detect_violations(car_images: list[np.ndarray]) -> list[Results]:\n",
+    "    violations = violation_detection_model.predict(source=car_images, classes=[7,9,10,11], verbose=False)\n",
+    "    return violations\n"
    ]
   },
   {
@@ -73,8 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plate_detection(car_images: list[np.ndarray]) -> list[Results]:\n",
-    "    plate_results = license_plate_detection_model.predict(source=car_images, verbose=False)\n",
+    "def plate_detection(belt_images: list[np.ndarray]) -> list[Results]:\n",
+    "    plate_results = license_plate_detection_model.predict(source=belt_images, verbose=False)\n",
     "    return plate_results"
    ]
   },
@@ -88,6 +127,8 @@
     "def get_plate_images(plate_results: list[Results]) -> list[np.ndarray]:\n",
     "    output = []\n",
     "    for plate in plate_results:\n",
+    "        if not plate.boxes:\n",
+    "            continue\n",
     "        for box in plate.boxes:\n",
     "            x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
     "            plate_image = plate.orig_img[y1:y2, x1:x2]\n",
@@ -102,14 +143,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_ocr_on_plate(plate_images: list[np.ndarray])->dict[str, np.ndarray]:\n",
-    "    ocr_results = {}\n",
+    "def run_ocr_on_plate(plate_images: list[np.ndarray])->list[str]:\n",
+    "    ocr_results = []\n",
     "    for plate in plate_images:\n",
-    "        \n",
     "        # Convert numpy array to PIL Image for pytesseract\n",
     "        pil_image = Image.fromarray(plate)\n",
     "        ocr_result = pytesseract.image_to_string(pil_image, config='--psm 7')\n",
-    "        ocr_results[ocr_result.strip()] = plate\n",
+    "        ocr_results.append(ocr_result.strip())\n",
     "    return ocr_results\n"
    ]
   },
@@ -120,13 +160,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_pipeline(image_path: Path | str):\n",
-    "    car_images = detect_cars(image_path)\n",
+    "def run_pipeline(images_path: list[Path]):\n",
+    "    car_results = detect_cars(images_path)\n",
+    "    car_images = get_car_images(car_results)\n",
     "    plate_results = plate_detection(car_images)\n",
     "    plate_images = get_plate_images(plate_results)\n",
     "    ocr_results = run_ocr_on_plate(plate_images)\n",
+    "    \n",
+    "    output= {\n",
+    "        \"car_results\": car_results,\n",
+    "        \"car_images\": car_images,\n",
+    "        \"plate_results\": plate_results,\n",
+    "        \"plate_images\": plate_images,\n",
+    "        \"ocr_results\": ocr_results\n",
+    "    }\n",
+    "    \n",
+    "    json.dump(output, open(\"pipeline_output.json\", \"w\"))\n",
     "\n",
-    "    return ocr_results"
+    "    return output"
    ]
   },
   {
@@ -144,41 +195,6 @@
     "    if '2cars.png' not in dirl:\n",
     "      !wget https://github.com/AFAskar/dlimageclass/blob/main/2cars.png?raw=true\n",
     "      !mv 2cars.png?raw=true 2cars.png\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dee36aac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def output(images_path: Path | str,output_dir:Path|str=\"output\") -> dict[str, str | list[str | Path]]:\n",
-    "    if isinstance(images_path, str):\n",
-    "        images_path=Path(images_path)\n",
-    "    images_path.mkdir(parents=True, exist_ok=True)\n",
-    "    if isinstance(output_dir, str):\n",
-    "        output_dir=Path(output_dir)\n",
-    "        \n",
-    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
-    "    \n",
-    "    ocr_results = run_pipeline(images_path)\n",
-    "    image_paths = []\n",
-    "    output = {}\n",
-    "    # save images with detected plates\n",
-    "    for plate_text, plate_image in ocr_results.items():\n",
-    "        safe_plate_text = plate_text.replace(\" \", \"_\").replace(\"\\n\", \"\")\n",
-    "        image_path = output_dir / f\"{safe_plate_text}.png\"\n",
-    "        Image.fromarray(plate_image).save(image_path)\n",
-    "        image_paths.append(str(image_path))\n",
-    "        output[plate_text] = str(image_path)\n",
-    "\n",
-    "    json_output=output_dir / \"output.json\"\n",
-    "    with open(json_output, \"w\") as f:\n",
-    "        json.dump(output, f, indent=4)\n",
-    "    \n",
-    "    \n",
-    "    return output"
    ]
   },
   {
