--- a/seatbelt.ipynb
+++ b/seatbelt.ipynb
@@ -20,7 +20,7 @@
     "results = model.train(data=coco_yaml, epochs=5, imgsz=640, device=device)\n",
     "\n",
     "# save the model\n",
-    "model.export(weights='yolo11n-searbelt.pt')"
+    "model.export(weights='yolo11n-seatbelt.pt')"
    ]
   }
  ],
