--- a/carpipeline.ipynb
+++ b/carpipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a4af4438",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "aceaffc5",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "1382ad55",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "cfe429bf",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6898beb0",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "07ac7b25",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "768d4c62",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6aa92a94",
    "metadata": {},
    "outputs": [],
@@ -166,14 +166,12 @@
     "    car_results = detect_cars(images_path)\n",
     "    car_images = get_Results_images(car_results)\n",
     "    if not car_images:\n",
-    "        print(\"No cars detected in any image.\")\n",
-    "        return [],[],[]\n",
+    "        raise ValueError(\"no Cars Detected in any image.\")\n",
     "    violation_results = detect_violations(car_images)\n",
     "    violation_results = clean_violations(violation_results) \n",
     "    violation_images = get_Results_orig_images(violation_results)\n",
     "    if not violation_results:\n",
-    "        print(\"No violations detected in any car.\")\n",
-    "        return [], [], []\n",
+    "        raise ValueError(\"No violations detected in any car.\")\n",
     "    plate_results = plate_detection(violation_images)\n",
     "    plate_images = get_Results_images(plate_results)\n",
     "    ocr_results = run_ocr_on_plate(plate_images)\n",
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "6e79ef2f",
    "metadata": {},
    "outputs": [],
@@ -208,7 +206,6 @@
     "            ocr_results[i]:\n",
     "            {        \n",
     "                \"violation_type\": get_violation_type(boxes), \n",
-    "                \"violation_bbox\":boxes.summary(),\n",
     "                \"violation_image\": violation_image_path,\n",
     "                \"license_plate\": plate_image_path,\n",
     "            }  \n",
@@ -221,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "4e9616bf",
    "metadata": {},
    "outputs": [],
@@ -238,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2a01bcdb",
    "metadata": {},
    "outputs": [],
@@ -246,8 +243,8 @@
     "import json\n",
     "\n",
     "# image paths to process are in Seat_belt_detection-2/test/images/\n",
-    "image_dir = Path(\"Seat_belt_detection-2/test/images/\")\n",
-    "image_paths = [image_dir / img for img in os.listdir(image_dir) if img.endswith('.jpg') or img.endswith('.png')]\n",
+    "image_dir = Path(\"test.jpg\")\n",
+    "image_paths = [image_dir]\n",
     "\n",
     "violation_results, plate_images, ocr_results = run_pipeline(image_paths)\n",
     "output_json= json_output(violation_results, plate_images, ocr_results)"
